# cmake-modules

./: .gitmodules  CMakeLists.txt  InstallTarget.cmake  MakeManual.cmake  MakeTarget.cmake  PackageConfigTemplate.cmake.in  build_instructions.md  conanfile.py  conanfile.txt  readme.md  readme.txt
applications/: CMakeLists.txt
applications/app_example/: CMakeLists.txt
applications/app_example/src/: main.cpp
cmake/: ConanPkgUtils.cmake  InstallTarget.cmake  MakeSourceGroups.cmake  MakeTarget.cmake
examples/: CMakeLists.txt
examples/example_app/: CMakeLists.txt
examples/example_app/src/: main.cpp
examples/example_lib/: CMakeLists.txt
examples/example_lib/include/example_lib/: code.h
examples/example_lib/src/: code.cpp
examples/example_lib_with_pkg/: CMakeLists.txt
examples/example_lib_with_pkg/include/example_lib_with_pkg/: code.h
examples/example_lib_with_pkg/src/: code.cpp
modules/: CMakeLists.txt
modules/module_example1/: CMakeLists.txt
modules/module_example1/include/module_example1/: code.h
modules/module_example1/src/: code.cpp
modules/module_example2/: CMakeLists.txt
modules/module_example2/include/module_example2/: code.h
modules/module_example2/src/: code.cpp
